package PaooGame;

import PaooGame.GameWindow.GameWindow;

public class Main
{
    public static void main(String[] args)
    {
        Game paooGame = new Game("PaooGame", 1408, 768); // 22x12
        paooGame.StartGame();
    }
}

//1408 x 768