@startuml

title __PAOOGAME's Class Diagram__\n

  namespace PaooGame {
    class PaooGame.Game {
        ~ eFlag : boolean
        ~ enterFlag : boolean
        ~ escFlag : boolean
        ~ isInBattle : boolean
        ~ isInInventory : boolean
        ~ isInMenu : boolean
        ~ oFlag : boolean
        ~ releaseENTERFlag : boolean
        ~ releaseESCFlag : boolean
        ~ releaseFlag : boolean
        ~ releaseOFlag : boolean
        - bs : BufferStrategy
        - g : Graphics
        - gameThread : Thread
        - level : int
        - runState : boolean
        - secondsTime : long
        + Game()
        + GetHeight()
        + GetKeyManager()
        + GetSecondsTime()
        + GetWidth()
        + StartGame()
        + StopGame()
        + run()
        - Draw()
        - InitGame()
        - Update()
    }
  }
  

  namespace PaooGame {
    class PaooGame.Main {
        {static} + main()
    }
  }
  

  namespace PaooGame {
    class PaooGame.RefLinks {
        {static} + level : int
        {static} + total : int
        {static} - hero : Hero
        {static} - isInBattle : boolean
        + GetGame()
        + GetHeight()
        + GetHero()
        + GetKeyManager()
        + GetMap()
        + GetNPC()
        + GetSecondsTime()
        + GetTileHeight()
        + GetTileWidth()
        + GetWidth()
        {static} + HeroNpcs()
        + RefLinks()
        + SetGame()
        + SetMap()
        + SetNPC()
        {static} + getAttackDamage()
        {static} + getBattle()
        {static} + getCamera()
        {static} + getHashtagX()
        {static} + getHashtagY()
        {static} + getHero()
        {static} + getInventory()
        {static} + getInventoryPage()
        {static} + getLife()
        {static} + getMenu()
        {static} + getNpcs()
        {static} + resetInventory()
        {static} + resetMenu()
        {static} + setBattle()
        {static} + setHero()
    }
  }
  

  PaooGame.Game .up.|> java.lang.Runnable
  PaooGame.Game o-- PaooGame.States.State : aboutState
  PaooGame.Game o-- PaooGame.States.State : battleState
  PaooGame.Game o-- PaooGame.States.State : inventoryState
  PaooGame.Game o-- PaooGame.Input.KeyManager : keyManager
  PaooGame.Game o-- PaooGame.States.State : menuState
  PaooGame.Game o-- PaooGame.States.State : playState
  PaooGame.Game o-- PaooGame.RefLinks : refLink
  PaooGame.Game o-- PaooGame.States.State : settingsState
  PaooGame.Game o-- PaooGame.Tiles.Tile : tile
  PaooGame.Game o-- PaooGame.GameWindow.GameWindow : wnd
  PaooGame.RefLinks o-- PaooGame.Game : game
  PaooGame.RefLinks o-- PaooGame.Maps.Map : map
  PaooGame.RefLinks o-- PaooGame.Items.NPC : npc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
